# Ayahos

./: .gitignore  .readthedocs.yaml  README.md  Repository refactor blueprint.docx  Wyrm v0 Structure Outline.docx  apple_m2_environment.yml  arch__init__.py  conda_env_create.yaml  f1_div_1MAE_favored_chan_type_granularity_stats.csv  f1_favored_chan_type_granularity_stats.csv  f1_mul_PC_div_1MAE_favored_chan_type_granularity_stats.csv  local_dev_quickstart.py  pyproject.toml  requirements.txt  runtests.py  setup.X  setup.py  setup_env.sh  setup_live_example.zsh  todo_list.md  wyrm.py  wyrm_logging_example.ini  wyrm_logging_example.py  ~$rm v0 Structure Outline.docx
PULSE/data/: __init__.py  dictstream.py  foldtrace.py  foldtracebuff.py  ftbuffer.py  header.py  message.py  mlstream.py  mltrace.py  mltracebuff.py  mltrigger.py  mlwindow.py  pick.py  trigger.py  triggerbuffer.py  window.py
PULSE/mod/: __init__.py  base.py  buffer.py  buffering.py  client.py  coordinate.py  detecting.py  pick.py  picker.py  picking.py  predict.py  predicting.py  process.py  processing.py  pyew.py  sample.py  sampler.py  sampling.py  sbm.py  sequence.py  sequencing.py  transact.py  trigger.py  triggering.py  window.py
PULSE/module/: __init__.py  _base.py  base.py  buffer.py  bundle.py  client.py  coordinate.py  predict.py  process.py  sequence.py  transact.py  trigger.py  util.py  window.py
PULSE/seq/: ring2ring.py  sbm_picker.py  sbm_picking.py  sbm_pipeline.py  sbm_prepost.py  sbm_preprocess.py  sequence.py
PULSE/sequences/: seisbench_preprocess.py
PULSE/test/: example_data.py
PULSE/util/: docs.py  earthworm.py  header.py  input.py  latency.py  log.py  pyew.py  seisbench.py  stats.py
PULSE/workflow/: run.py  seedlink_picker.py
PULSED/data/: mlstream.py  mltrace.py  mltracebuff.py  mltrigger.py  mlwindow.py
PULSED/module/: _base.py  buffer.py  bundle.py  client.py  coordinate.py  ew_transact.py  predict.py  process.py  sequence.py  transact.py  trigger.py  util.py  (+1 more)
ayahos/: __init__.py
diagrams/: ANSS_schemdraw_PFDs.ipynb  schemdraw_process_flow_diagrams.ipynb
doc/: Wyrm v0 Structure Outline.docx  ~$rm v0 Structure Outline.docx
docs/: conf.py  refresh_autodocs.sh  requirements.txt
environment/: dev_env_apple_silicon.yml  ew_macosx.bash  ew_macosx_arm.bash  install_env.bash  pyearthwyrm_env.yml  setup_env.sh  wyrm_py3_12_test.yml  wyrm_v0_apple.yml
ewflow/: ewflow.py
example/: AQMS_event_mag_phase_query.sh
examples/: run_pyside_from_staged_data.ipynb
parameter_exploration/: semblace_trigger_scanner.py  semblance_post_processing.py  semblance_pset_trigger_scanner.py  semblance_trigger_scanner.py
submodule/: mlpicker_tube.py
tank_example/: tankplayer.d
util/: pyew.py
wyrm/: __init__.py
(+518 files in other folders)
