[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wyrm"
version = "0.0.0"
description = "A project connecting Earthworm to Python ML workflows"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.9"
authors = [
    { name = "Nathan T. Stevens", email = "ntsteven@uw.edu" },
]
maintainers = [
    { name = "Nathan T. Stevens", email = "ntsteven@uw.edu" },
]
keywords = ["earthworm", "seismology", "machine learning", "signal processing", "earthquake"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU AFFERO GENERAL PUBLIC LICENSE v3 (AGPL-3.0)",
]
dependencies = [
    "cython"
    "numpy",
    "pandas",
    "seisbench",
]

[tool.setuptools.packages.find]
include = ["wyrm*"]


[project.urls]
GitHub = "https://github.com/pnsn/wyrm"



