[project]
name = "wyrm"
version = "0.0.0"
authors = {name="Nathan T. Stevens", email="ntsteven@uw.edu"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: AGPL-3.0 :: GNU General Public License",
    "Operating System :: ISTI Earthworm Compliant",
    "Development Status :: 3 - Alpha"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
[toll.setuptools.dependencies]
python = "^3.8"
seisbench = "*"
cython = "*"
numpy = "*"
obspy = "*"
pandas = "*"
ipython = "*"

[tool.setuptools.package]
name = "wyrm"
version = "0.0.0"

[[tool.setuptools.package.files]]
path = "core"
include = ["*.py"]

[[tool.setuptools.package.files]]
path = "util"
include = ["*.py"]

[[tool.setuptools.package.files]]
path = "modules"
include = ["*.py"]

[[tool.setuptools.package.files]]
path = "scripts"
include = ["*.py"]