[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ayahos"
version = "0.0.0"
authors = [{name="Nathan T. Stevens", email="ntsteven@uw.edu"}]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: AGPL-3.0 :: GNU General Public License",
    "Operating System :: ISTI Earthworm Compliant",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "seisbench",
    "cython",
    "numpy",
    "obspy",
    "pandas",
    "ipython",
]

[tool.setuptools.packages.find]
include = ["ayahos*"]

[project.urls]
GitHub = "https://github.com/pnsn/Ayahos"
PNSN = "https://pnsn.org"